--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.0",
     "react-tooltip": "^5.29.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
